--- a/aboutus.html
+++ b/aboutus.html
@@ -17,7 +17,7 @@
         <P>ThankYou for Choosing our Website for Coding.</P>
     </section>
     <nav>
-        <li class="link"><a href="index.html" class="nav__btn">Back to Home Page</a></li>
+        <li class="link"><a href="home-page.html" class="nav__btn">Back to Home Page</a></li>
     </nav>
 </body>
 </html>
