--- a/courses.html
+++ b/courses.html
@@ -25,7 +25,7 @@
         </div>
     </section>
     <nav>
-        <li class="link"><a href="index.html" class="nav__btn">Back to Home Page</a></li>
+        <li class="link"><a href="home-page.html" class="nav__btn">Back to Home Page</a></li>
     </nav>
 </body>
 </html>
