--- a/register.html
+++ b/register.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav>
-        <li class="link"><a href="index.html" class="nav__btn">Back to Home Page</a></li>
+        <li class="link"><a href="home-page.html" class="nav__btn">Back to Home Page</a></li>
     </nav>
     <div class="container">
         <h1>Register for our CodersHub Platform</h1>
